<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lavLogin"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_32"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_speed="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lavLogin"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_32">

        <com.learn.mydiary.util.custom.edittext.EditTextEmail
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginHorizontal="@dimen/dimen_16">

        <com.learn.mydiary.util.custom.edittext.EditTextPassword
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvNoAccount"
        style="@style/RobotoGrayRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/text_14"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:text="@string/dont_have_account"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvRegister"
        style="@style/RobotoBlueRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/mtvNoAccount"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_marginStart="@dimen/dimen_4"
        android:layout_marginTop="@dimen/dimen_8"
        android:text="@string/register_here"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbLogin"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login"/>

</androidx.constraintlayout.widget.ConstraintLayout>