<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lavRegister"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_32"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_speed="1"/>
    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvTitle"
        style="@style/RobotoBold"
        android:textSize="@dimen/text_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_success"
        android:layout_marginTop="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/lavRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvSubtitle"
        style="@style/Body_Roboto_14"
        android:textSize="@dimen/text_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login"
        app:layout_constraintTop_toBottomOf="@id/mtvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_8"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbLogin"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login"/>

</androidx.constraintlayout.widget.ConstraintLayout>